# Gui-for-DataBase

./: .dockerignore  Dockerfile  README.md  build.bat  conanfile.txt  config.json  docker-compose.yml
backend/: CMakeLists.txt
backend/src/: main.cc
backend/src/controllers/: AuthController.cc  AuthController.h  DeploymentController.cc  DeploymentController.h  SchemaController.cc  SchemaController.h
backend/src/filters/: JwtAuthFilter.cc  JwtAuthFilter.h
backend/src/models/: Database.cc  Database.h  DatabaseConfig.cc  DatabaseConfig.h  Schema.cс  Schema.h  User.cc  User.h
frontend/: config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/DatabaseBuilder/: DatabaseBuilder.tsx  SchemaViewer.tsx  TableBlock.tsx  styles.css
frontend/src/components/DeploymentForm/: DeploymentForm.tsx
frontend/src/services/: api.ts
frontend/src/types/: database.ts
